--- a/tex/References.bib
+++ b/tex/References.bib
@@ -32,12 +32,6 @@
   year={2020}
 }
 
-@book{chowdhury2003nlp,
-  title={Natural language processing},
-  author={Chowdhury, Gobinda G},
-  year={2003},
-  publisher={Facet publishing}
-}
 
 % VADER: A Parsimonious Rule-based Model for Sentiment Analysis of Social Media Text
 @inproceedings{hutto2014vader,
@@ -489,3 +483,139 @@
     note = {ISBN 0-387-27960-1},
     url = {https://www.pfaffikus.de},
   }
+  
+% Annual Review of Information Science and Technology
+@article{chowdhury2003,
+    title={Natural Language Processing},
+    author={Gobinda G. Chowdhury},
+    volume={37},
+    journal={Annual Review of Information Science and Technology},
+    year={2003},
+    pages={51--89}
+}
+
+% @article{bholat2015text,
+  title={Text mining for central banks},
+  author={Bholat, David and Hansen, Stephen and Santos, Pedro and Schonhardt-Bailey, Cheryl},
+  journal={Available at SSRN 2624811},
+  year={2015}
+}
+
+% Estimation and inference of impulse responses by local projections
+@article{jorda2005estimation,
+  title={Estimation and inference of impulse responses by local projections},
+  author={Jord{\`a}, {\`O}scar},
+  journal={American economic review},
+  volume={95},
+  number={1},
+  pages={161--182},
+  year={2005}
+}
+
+% Speed limit policies: the output gap and optimal monetary policy
+@article{walsh2003speed,
+  title={Speed limit policies: the output gap and optimal monetary policy},
+  author={Walsh, Carl},
+  journal={American Economic Review},
+  volume={93},
+  number={1},
+  pages={265--278},
+  year={2003}
+}
+
+% Monetary policy, trend inflation, and the great moderation: An alternative interpretation
+@article{coibion2011monetary,
+  title={Monetary policy, trend inflation, and the great moderation: An alternative interpretation},
+  author={Coibion, Olivier and Gorodnichenko, Yuriy},
+  journal={American Economic Review},
+  volume={101},
+  number={1},
+  pages={341--70},
+  year={2011}
+}
+
+% What does the change in the FOMC's statement of objectives mean?
+@article{thornton2011does,
+  title={What does the change in the FOMC's statement of objectives mean?},
+  author={Thornton, Daniel L},
+  journal={Economic Synopses},
+  volume={2011},
+  number={2011-01-01},
+  year={2011},
+  publisher={Federal Reserve Bank of St. Louis}
+}
+
+% Should central banks respond to movements in asset prices?
+@article{bernanke2001should,
+  title={Should central banks respond to movements in asset prices?},
+  author={Bernanke, Ben S and Gertler, Mark},
+  journal={american economic review},
+  volume={91},
+  number={2},
+  pages={253--257},
+  year={2001}
+}
+
+% Monetary policy and asset prices
+@article{kohn2006monetary,
+  title={Monetary policy and asset prices},
+  author={Kohn, Donald L},
+  journal={Monetary Policy},
+  pages={43},
+  year={2006},
+  publisher={Citeseer}
+}
+
+% Monetary policy and asset prices revisited
+@article{kohn2009monetary,
+  title={Monetary policy and asset prices revisited},
+  author={Kohn, Donald L},
+  journal={Cato J.},
+  volume={29},
+  pages={31},
+  year={2009},
+  publisher={HeinOnline}
+}
+
+% Should us monetary policy have a ternary mandate?
+@inproceedings{peek2015should,
+  title={Should us monetary policy have a ternary mandate?},
+  author={Peek, Joe and Rosengren, Eric S and Tootell, Geoffrey MB},
+  booktitle={Federal Reserve Bank of Boston 59 th Economic Conference: Macroprudential Monetary Policy},
+  year={2015}
+}
+
+% The economics of the Fed put
+@article{cieslak2021economics,
+  title={The economics of the Fed put},
+  author={Cieslak, Anna and Vissing-Jorgensen, Annette},
+  journal={The Review of Financial Studies},
+  volume={34},
+  number={9},
+  pages={4045--4089},
+  year={2021},
+  publisher={Oxford University Press}
+}
+
+% An optimization-based econometric framework for the evaluation of monetary policy
+@article{rotemberg1997optimization,
+  title={An optimization-based econometric framework for the evaluation of monetary policy},
+  author={Rotemberg, Julio J and Woodford, Michael},
+  journal={NBER macroeconomics annual},
+  volume={12},
+  pages={297--346},
+  year={1997},
+  publisher={MIT Press}
+}
+
+% Nominal rigidities and the dynamic effects of a shock to monetary policy
+@article{christiano2005nominal,
+  title={Nominal rigidities and the dynamic effects of a shock to monetary policy},
+  author={Christiano, Lawrence J and Eichenbaum, Martin and Evans, Charles L},
+  journal={Journal of political Economy},
+  volume={113},
+  number={1},
+  pages={1--45},
+  year={2005},
+  publisher={The University of Chicago Press}
+}
