--- a/tex/main.tex
+++ b/tex/main.tex
@@ -124,24 +124,24 @@ BoldItalicFont=GARA.ttf,
 
 \newpage
 \pagenumbering{arabic}
-\input{Text/4.Introduction.tex}
+%\input{Text/4.Introduction.tex}
 
 \input{Text/chapter2.tex}
 
 %\newpage
-\input{Text/chapter3.tex}
+%\input{Text/chapter3.tex}
 
-%\newpage
+\newpage
 \input{Text/chapter4.tex}
 
 %\newpage
-\input{Text/6.Conclusion.tex}
+%\input{Text/6.Conclusion.tex}
 
 \newpage
 \bibliographystyle{apacite}
 \bibliography{References.bib}
 
-\newpage 
+%\newpage 
 
 \chapter*{Appendix}
 \addcontentsline{toc}{chapter}{Appendix}
